* fix btns overlap.

--- a/www/theme/default/style.css
+++ b/www/theme/default/style.css
@@ -127,7 +127,7 @@ body.xxc-embed.m-productplan-view,body.xxc-embed.m-bug-browse,body.xxc-embed.m-p
 .mt10 {margin-top: 10px;}
 
 
-#programTableList > tr:hover {background: #E6F0FF; opacity: 0.8;}
+#programTableList > tr:hover {background: #E6F0FFCC;}
 #programTableList > tr[data-type="project"] > .c-name:hover > a {color: #1E6AEB !important;}
 #programTableList > tr[data-type="project"] > .c-name > a {color: #2463c7 !important;}
 .m-product-all #mainMenu > div.btn-toolbar.pull-right > a.btn.btn-link.iframe {color: #18A6FD;}
